--- a/SpaceTraderAndroid/app/src/main/res/values/strings.xml
+++ b/SpaceTraderAndroid/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Space Trader (Android)</string>
     <string name="action_settings">Settings</string>
+    <string name="default_web_client_id" translatable="false">xxxxxxxx</string>
 </resources>
